@@ -5,6 +5,10 @@
   * Node#at_xpath returns the first element of the NodeSet matching the XPath expression.
   * Node#at_css returns the first element of the NodeSet matching the CSS selector.
 
+* Bugfixes
+
+  * returns nil when HTML documents do not declare a meta encoding tag. GH #115
+
 === 1.3.3 / 2009/07/26
 
 * New Features
